; ModuleID = '/home/carl/AnghaBench/esp-idf/components/spi_flash/extr_spi_flash_rom_patch.c_esp_rom_spiflash_wait_idle.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/spi_flash/extr_spi_flash_rom_patch.c_esp_rom_spiflash_wait_idle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_ROM_SPIFLASH_RESULT_OK = common dso_local global i64 0, align 8
@ESP_ROM_SPIFLASH_RESULT_ERR = common dso_local global i64 0, align 8
@SPI_MEM_ST = common dso_local global i32 0, align 4
@SPI_ST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @esp_rom_spiflash_wait_idle(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i64, i64* @ESP_ROM_SPIFLASH_RESULT_OK, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @esp_rom_spiflash_read_status(i32* %6, i32* %4)
  %8 = icmp ne i64 %5, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i64, i64* @ESP_ROM_SPIFLASH_RESULT_ERR, align 8
  store i64 %10, i64* %2, align 8
  br label %13

11:                                               ; preds = %1
  %12 = load i64, i64* @ESP_ROM_SPIFLASH_RESULT_OK, align 8
  store i64 %12, i64* %2, align 8
  br label %13

13:                                               ; preds = %11, %9
  %14 = load i64, i64* %2, align 8
  ret i64 %14
}

declare dso_local i64 @esp_rom_spiflash_read_status(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
